# just_read

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  pyproject.toml  pytest.ini
core_project/: apps.py  models.py  serializers.py  tests.py  views.py
core_project/migrations/: 0001_initial.py  0002_readingproject_active_project.py
frontend/src/: App.css  App.jsx
frontend/src/components/: TextualItemsList.jsx
just_read/: asgi.py  settings.py  urls.py  wsgi.py
src/: metadata_service.py  models.py
src/domain_models/: ReadingProject.py  TextualItem.py  reader.py  reading_project.py  textual_item.py
src/migrations/: 0001_initial.py
tests/: conftest.py  test_metadata_service.py  test_models.py
tests/domain_models/: test_reader.py  test_reading_project.py  test_textual_item.py
