[project]
name = "just_read"
version = "0.1.0"
description = "Project-based reading tracking app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
